Secure WiFi credentials with .env configuration
🔐 Security Improvements:
- Move WiFi credentials from code to .env files
- Add generate_config.py to create config.h from .env
- Update .gitignore to exclude .env and config.h files
- All sketches now use config.h (not hardcoded credentials)

🐳 Docker Integration:
- Add docker-compose.yml for n8n + image viewer
- Create Dockerfile for Python image viewer
- Environment variable support in view_captures.py
- Comprehensive Docker setup documentation

📚 Documentation:
- CONFIGURATION.md - Complete config guide
- DOCKER_SETUP.md - Docker deployment guide
- Updated sketches with config.h instructions

✅ What's Protected:
- WiFi SSID and password never in git
- .env and config.h in .gitignore
- Secure credential management

Built by Glenn Mossy

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,13 @@ README_OLD.md
 
 # Logs
 *.log
+
+# Docker
+.env
+
+# n8n data
+n8n-workflows/*.json
+!n8n-workflows/example-*.json
+
+# Arduino config files (contain WiFi credentials)
+**/config.h
