Reorganize n8n Docker setup into dedicated folder
📁 Structure Changes:
- Move all Docker/n8n files to n8n/ folder
- DOCKER_SETUP.md → n8n/README.md
- N8N_INTEGRATION.md → n8n/N8N_INTEGRATION.md
- docker-compose.yml → n8n/docker-compose.yml
- Dockerfile.viewer → n8n/Dockerfile.viewer

🔧 Updates:
- Makefile: All docker commands now use 'cd n8n'
- docker-compose.yml: Updated paths to reference parent directory
- README.md: Updated project structure and links
- n8n/README.md: Updated all commands with 'cd n8n' prefix

✅ Benefits:
- Cleaner project root
- Better organization
- Easier to find n8n-related files
- All automation in one place

Commands still work:
- make docker
- make docker-stop
- make docker-logs

Built by Glenn Mossy

--- a/n8n/docker-compose.yml
+++ b/n8n/docker-compose.yml
@@ -28,15 +28,15 @@ services:
   # Python image viewer and API server
   image-viewer:
     build:
-      context: .
-      dockerfile: Dockerfile.viewer
+      context: ..
+      dockerfile: n8n/Dockerfile.viewer
     container_name: esp32-image-viewer
     restart: unless-stopped
     ports:
       - "8080:8080"
     volumes:
-      - ./captures:/app/captures
-      - ./view_captures.py:/app/view_captures.py
+      - ../captures:/app/captures
+      - ../view_captures.py:/app/view_captures.py
     environment:
       - ESP32_IP=10.0.0.30
       - PORT=8080
