feat: Complete FastAPI backend, architecture docs, and project cleanup
Major Features Added:
- FastAPI backend with 39 REST API endpoints across 5 categories
  * Camera API (8 endpoints): capture, stream, list, delete, rename
  * ESP32 API (7 endpoints): status, info, network, stats, test, ping
  * n8n API (9 endpoints): workflows, webhooks, triggers, executions
  * Sensors API (10 endpoints): motion, LCD, generic readings
  * AI/Chat API (5 endpoints): image analysis, chat, labeling, detection

Backend Architecture:
- Python 3.13 with FastAPI and Pydantic
- Async HTTP client (httpx) for ESP32 communication
- Docker containerized with health checks (10s intervals)
- Environment-based configuration (.env support)
- Comprehensive logging and error handling
- OpenAPI/Swagger documentation at /docs

Documentation:
- Complete architecture documentation with 8 Mermaid diagrams
- Excalidraw editable diagram (JSON format)
- SVG vector graphic for presentations
- Backend README with setup and examples
- API endpoints reference (39 endpoints documented)
- Deployment guide with Docker instructions

Project Cleanup:
- Removed test sketches (basic_test, simple, simple_test, test, webserver)
- Consolidated hardware test (LED + Serial I/O + Chip info)
- Removed hardcoded WiFi credentials from all sketches
- Updated to use .env -> config.h pattern for security
- Enhanced .gitignore for macOS files and captures folder

Configuration Updates:
- WiFi SSID updated to 2.4GHz network (ESP32 compatible)
- Python 3.13 across all Docker images
- Health checks added to all Docker services
- Shared volumes for image storage

Docker Services:
- FastAPI backend (port 8000)
- n8n automation (port 5678)
- Image viewer (port 8080)
- All with 10-second health checks

Files Added:
- backend/ (complete FastAPI application)
- docs/architecture.md (8 Mermaid diagrams)
- docs/architecture.svg (vector graphic)
- docs/architecture.excalidraw.json (editable diagram)
- docs/README.md (documentation guide)



--- a/.gitignore
+++ b/.gitignore
@@ -23,16 +23,20 @@ build/
 *.swo
 *~
 
-# OS
+# OS - macOS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+.AppleDouble
+.LSOverride
+Icon
 
-# Captures folder (images)
-captures/*.jpg
-captures/*.jpeg
-captures/*.png
-
-# Keep captures folder structure
+# Captures folder (images) - ignore all image files
+captures/
 !captures/.gitkeep
 
 # Old files
